Fix footer white-space nowrap

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -146,6 +146,8 @@
   justify-content: space-around;
   flex-direction: column;
   gap: 32px;
+  text-align: center;
+  white-space: nowrap;
 }
 
 .footer-block__details-content .list-menu__item--link,
@@ -211,6 +213,7 @@
   color: var(--color-accent-1);
   font-size: 1.3rem;
   font-weight: 600;
+  white-space: nowrap;
 }
 
 .footer-block:only-child .footer-block__brand-info {
